--- a/Project_1.css
+++ b/Project_1.css
@@ -3,7 +3,7 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: cursive;
-    background-image: url(../Image/Anime\ Girl\ Music\ theme\ 2.jpg);
+    background-image: url(../Image/Music\ cover.jpg);
     background-size: 1300px;
 }
 .left img{
@@ -18,6 +18,7 @@ body{
     left: 40px;
     font-size: 14px;
     font-weight: bold;
+    color: white;
 }
 .centre{
     /* border: 2px solid blue; */
@@ -35,7 +36,7 @@ body{
 }
 .nav a{
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
     font-weight: bold;
 }
 .centre ul{
@@ -49,7 +50,7 @@ body{
 .container{
     border: 2px solid rgb(0, 0, 0);
     width: 700px;
-    margin: 80px 57px;
+    margin: 41px 81px;
     border-radius: 10px;
     background-image: url(../Image/Kaori\ music\ theme.jpg);
     background-size: 700px;
@@ -100,7 +101,7 @@ body{
     font-family: cursive;
 }
 header{
-    background-color: #16a7cef2;
+    background-color: #000000db;
     height: 112px;
 }
 ul{
